--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-Admin==1.5.1
 Flask-BabelEx==0.9.3
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
+flask-marshmallow==0.9.0
 Flask-Principal==0.4.0
 flask-restplus==0.11.0
 Flask-Security==3.0.0
@@ -19,6 +20,8 @@ Jinja2==2.10
 jsonschema==2.6.0
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+marshmallow==2.15.3
+marshmallow-sqlalchemy==0.13.2
 mccabe==0.6.1
 passlib==1.7.1
 pbkdf2==1.3
