--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ flask-restplus==0.11.0
 Flask-Security==3.0.0
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+gunicorn==19.8.1
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
