--- a/requirements.txt
+++ b/requirements.txt
@@ -2,23 +2,17 @@ alembic==0.9.9
 aniso8601==3.0.0
 asn1crypto==0.24.0
 astroid==1.6.4
-Babel==2.5.3
-blinker==1.4
 cffi==1.11.5
 click==6.7
 cryptography==1.9
 Flask==1.0.2
 Flask-Admin==1.5.1
-Flask-BabelEx==0.9.3
-Flask-Login==0.4.1
-Flask-Mail==0.9.1
+Flask-JWT-Extended==3.10.0
+Flask-Limiter==1.0.1
 flask-marshmallow==0.9.0
 Flask-Migrate==2.1.1
-Flask-Principal==0.4.0
 flask-restplus==0.11.0
-Flask-Security==3.0.0
 Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
 gunicorn==19.8.1
 idna==2.6
 isort==4.3.4
@@ -27,21 +21,23 @@ Jinja2==2.10
 jsonschema==2.6.0
 jwt==0.5.3
 lazy-object-proxy==1.3.1
+limits==1.3
 Mako==1.0.7
 MarkupSafe==1.0
 marshmallow==2.15.3
 marshmallow-sqlalchemy==0.13.2
 mccabe==0.6.1
-passlib==1.7.1
 pbkdf2==1.3
+Pillow==5.1.0
+pip-autoremove==0.9.1
 psycopg2-binary==2.7.4
 pycparser==2.18
+PyJWT==1.6.4
 pylint==1.9.1
 python-dateutil==2.7.3
 python-editor==1.0.3
 pytz==2018.4
 six==1.11.0
-speaklater==1.3
 SQLAlchemy==1.2.7
 Werkzeug==0.14.1
 wrapt==1.10.11
