--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==6.7
 cryptography==2.3
 Flask==1.0.2
 Flask-Admin==1.5.1
+Flask-Cors==3.0.6
 Flask-JWT-Extended==3.12.1
 Flask-Limiter==1.0.1
 flask-marshmallow==0.9.0
