--- a/requirements.txt
+++ b/requirements.txt
@@ -2,18 +2,25 @@ alembic==1.0.0
 aniso8601==3.0.2
 asn1crypto==0.24.0
 astroid==2.0.4
+Babel==2.6.0
+blinker==1.4
 cffi==1.11.5
 click==6.7
 cryptography==2.3
 Flask==1.0.2
 Flask-Admin==1.5.1
+Flask-BabelEx==0.9.3
 Flask-Cors==3.0.6
 Flask-JWT-Extended==3.12.1
 Flask-Limiter==1.0.1
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
 flask-marshmallow==0.9.0
 Flask-Migrate==2.2.1
+Flask-Principal==0.4.0
 flask-restplus==0.11.0
 Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
 gunicorn==19.9.0
 idna==2.7
 isort==4.3.4
@@ -27,6 +34,7 @@ MarkupSafe==1.0
 marshmallow==2.15.4
 marshmallow-sqlalchemy==0.14.0
 mccabe==0.6.1
+passlib==1.7.1
 pbkdf2==1.3
 Pillow==5.2.0
 pip-autoremove==0.9.1
@@ -38,6 +46,7 @@ python-dateutil==2.7.3
 python-editor==1.0.3
 pytz==2018.5
 six==1.11.0
+speaklater==1.3
 SQLAlchemy==1.2.10
 typed-ast==1.1.0
 Werkzeug==0.14.1
