--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ Flask-Principal==0.4.0
 flask-restplus==0.12.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
+Flask-Testing==0.7.1
 Flask-WTF==0.14.2
 gunicorn==19.9.0
 idna==2.8
