--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,54 @@
-alembic==1.0.0
-aniso8601==3.0.2
+alembic==1.0.5
+aniso8601==4.1.0
 asn1crypto==0.24.0
-astroid==2.0.4
+astroid==2.1.0
 Babel==2.6.0
 blinker==1.4
 cffi==1.11.5
-click==6.7
-cryptography==2.3
+Click==7.0
+cryptography==2.4.2
 Flask==1.0.2
-Flask-Admin==1.5.1
+Flask-Admin==1.5.3
 Flask-BabelEx==0.9.3
-Flask-Cors==3.0.6
-Flask-JWT-Extended==3.12.1
+Flask-Cors==3.0.7
+Flask-JWT-Extended==3.15.0
 Flask-Limiter==1.0.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 flask-marshmallow==0.9.0
-Flask-Migrate==2.2.1
+Flask-Migrate==2.3.1
 Flask-Principal==0.4.0
-flask-restplus==0.11.0
+flask-restplus==0.12.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 gunicorn==19.9.0
-idna==2.7
+idna==2.8
 isort==4.3.4
-itsdangerous==0.24
+itsdangerous==1.1.0
 Jinja2==2.10
 jsonschema==2.6.0
 lazy-object-proxy==1.3.1
 limits==1.3
 Mako==1.0.7
-MarkupSafe==1.0
-marshmallow==2.15.4
-marshmallow-sqlalchemy==0.14.0
+MarkupSafe==1.1.0
+marshmallow==2.17.0
+marshmallow-sqlalchemy==0.15.0
 mccabe==0.6.1
 passlib==1.7.1
 pbkdf2==1.3
-Pillow==5.2.0
+Pillow==5.4.1
 pip-autoremove==0.9.1
-psycopg2-binary==2.7.5
-pycparser==2.18
-PyJWT==1.6.4
-pylint==2.1.1
-python-dateutil==2.7.3
+psycopg2-binary==2.7.6.1
+pycparser==2.19
+PyJWT==1.7.1
+pylint==2.2.2
+python-dateutil==2.7.5
 python-editor==1.0.3
-pytz==2018.5
-six==1.11.0
+pytz==2018.9
+six==1.12.0
 speaklater==1.3
-SQLAlchemy==1.2.10
-typed-ast==1.1.0
+SQLAlchemy==1.2.15
+typed-ast==1.1.1
 Werkzeug==0.14.1
-WTForms==2.2.1
 wrapt==1.10.11
+WTForms==2.2.1
