--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,38 @@
-alembic
-aniso8601
-asn1crypto
-astroid
-Babel
-blinker
-cffi
-Click
-cryptography
-Flask
-Flask-BabelEx
-Flask-Bcrypt
-Flask-Cors
-Flask-JWT-Extended
-Flask-Limiter
-Flask-Mail
-flask-marshmallow
-Flask-Migrate
-flask-restplus
-Flask-Script
-Flask-SQLAlchemy
-Flask-Talisman
-Flask-Testing
-gunicorn
-idna
-isort
-itsdangerous
-Jinja2
-jsonschema
-lazy-object-proxy
-limits
-Mako
-MarkupSafe
-marshmallow
-marshmallow-sqlalchemy
-mccabe
-passlib
-pbkdf2
-Pillow
-pip-autoremove
-psycopg2-binary
-pycparser
-PyJWT
-pylint
-python-dateutil
-python-editor
-pytz
-six
-speaklater
-SQLAlchemy
-typed-ast
-Werkzeug
-wrapt
+alembic==1.3.1
+aniso8601==8.0.0
+attrs==19.3.0
+bcrypt==3.1.7
+cffi==1.13.2
+Click==7.0
+Flask==1.1.1
+Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.8
+Flask-JWT-Extended==3.24.1
+Flask-Limiter==1.1.0
+flask-marshmallow==0.10.1
+Flask-Migrate==2.5.2
+flask-restplus==0.13.0
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.1
+flask-talisman==0.7.0
+importlib-metadata==0.23
+itsdangerous==1.1.0
+Jinja2==2.10.3
+jsonschema==3.2.0
+limits==1.3
+Mako==1.1.0
+MarkupSafe==1.1.1
+marshmallow==3.2.2
+marshmallow-sqlalchemy==0.19.0
+more-itertools==7.2.0
+psycopg2==2.8.4
+pycparser==2.19
+PyJWT==1.7.1
+pyrsistent==0.15.5
+python-dateutil==2.8.1
+python-editor==1.0.4
+pytz==2019.3
+six==1.13.0
+SQLAlchemy==1.3.11
+Werkzeug==0.16.0
+zipp==0.6.0
