--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ flask-restplus==0.13.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 flask-talisman==0.7.0
+Flask-Testing==0.7.1
+gunicorn==20.0.0
 importlib-metadata==0.23
 itsdangerous==1.1.0
 Jinja2==2.10.3
