--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,6 @@ bcrypt = "==3.1.7"
 cffi = "==1.13.2"
 click = "==7.0"
 flask-marshmallow = "==0.10.1"
-flask-restplus = "==0.13.0"
 flask-talisman = "==0.7.0"
 gunicorn = "==20.0.0"
 importlib-metadata = "==0.23"
@@ -46,6 +45,7 @@ MarkupSafe = "==1.1.1"
 PyJWT = "==1.7.1"
 SQLAlchemy = "==1.3.11"
 Werkzeug = "==0.16.0"
+flask-restx = "*"
 
 [requires]
 python_version = "3.8"
