--- a/requirements.txt
+++ b/requirements.txt
@@ -3,37 +3,38 @@ aniso8601==8.0.0
 attrs==19.3.0
 bcrypt==3.1.7
 cffi==1.13.2
-Click==7.0
-Flask==1.1.1
-Flask-Bcrypt==0.7.1
-Flask-Cors==3.0.8
-Flask-JWT-Extended==3.24.1
-Flask-Limiter==1.1.0
+click==7.0
+flask==1.1.1
+flask-bcrypt==0.7.1
+flask-cors==3.0.8
+flask-jwt-extended==3.24.1
+flask-limiter==1.1.0
 flask-marshmallow==0.10.1
-Flask-Migrate==2.5.2
-Flask-Script==2.0.6
-Flask-SQLAlchemy==2.4.1
+flask-migrate==2.5.2
+flask-restx==0.1.1
+flask-script==2.0.6
+flask-sqlalchemy==2.4.1
 flask-talisman==0.7.0
-Flask-Testing==0.7.1
+flask-testing==0.7.1
 gunicorn==20.0.0
 importlib-metadata==0.23
 itsdangerous==1.1.0
-Jinja2==2.10.3
+jinja2==2.10.3
 jsonschema==3.2.0
 limits==1.3
-Mako==1.1.0
-MarkupSafe==1.1.1
+mako==1.1.0
+markupsafe==1.1.1
 marshmallow==3.2.2
 marshmallow-sqlalchemy==0.19.0
 more-itertools==7.2.0
 psycopg2==2.8.4
 pycparser==2.19
-PyJWT==1.7.1
+pyjwt==1.7.1
 pyrsistent==0.15.5
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2019.3
 six==1.13.0
-SQLAlchemy==1.3.11
-Werkzeug==0.16.0
+sqlalchemy==1.3.11
+werkzeug==0.16.0
 zipp==0.6.0
